# split51

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/audio/: loopback.rs  mod.rs
src/config/: mod.rs
src/dsp/: mod.rs
src/tray/: mod.rs
