[package]
name = "split51"
version = "1.0.0"
edition = "2024"
description = "Windows 5.1ch surround audio splitter - Route RL/RR channels to secondary output"
authors = ["tatsu-t"]
repository = "https://github.com/tatsu-t/split51"
license = "MIT"
keywords = ["audio", "wasapi", "surround", "5.1ch", "windows"]

[dependencies]
# Audio
cpal = "0.15"
# System tray
tray-icon = "0.19"
muda = "0.15"  # Menu for tray (must match tray-icon's muda version)
# Windows event loop
winit = { version = "0.30", features = ["rwh_06"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Error handling
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Ringbuffer for audio transfer
ringbuf = "0.4"
# Resampling for sample rate conversion
rubato = "0.16"
# Parking lot for better locks
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Ole",
] }

[[bin]]
name = "split51"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
